--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=PaymentService
+
+
+#For Atlas
+spring.data.mongodb.uri=mongodb+srv://g00397054:tH4nMabLPWCvvqWd@cluster0.sywnf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=paymentservicedb
