Added rabbitConfig class for rabbitMQ

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ server.port=8082
 #For Atlas
 spring.data.mongodb.uri=mongodb+srv://g00397054:tH4nMabLPWCvvqWd@cluster0.sywnf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=paymentservicedb
+
+#Setup for RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
